force-app/main/default/objects/Order_Submitted__e/Order_Submitted__e.object-meta.xml
<CustomObject>
    <description></description>
    <label>Order Submitted</label>
    <pluralLabel>Order Submitted Events</pluralLabel>
</CustomObject>