force-app/main/default/objects/Order_Submitted__e/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Amount</description>
</CustomField>