force-app/main/default/objects/Order_Submitted__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Order Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Order Id</description>
</CustomField>