force-app/main/default/objects/Order_Submitted__e/fields/Outlet_Id__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Id__c</fullName>
    <label>Outlet Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Outlet Id</description>
</CustomField>